--- a/alpine-php-doxygen/Dockerfile
+++ b/alpine-php-doxygen/Dockerfile
@@ -1,3 +1,3 @@
 FROM alpine:latest
 
-RUN apk add --no-cache git php7 doxygen graphviz bash
+RUN apk add --no-cache git php7 php8 doxygen graphviz bash
