--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,10 @@ gitlab-ci:
     script:
         - mkdir -p /kaniko/.docker
         - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
-        - /kaniko/executor --context $CI_PROJECT_DIR/alpine-deploy --dockerfile $CI_PROJECT_DIR/alpine-deploy/Dockerfile --destination $CI_REGISTRY_IMAGE/alpine-deploy:latest
-        - /kaniko/executor --context $CI_PROJECT_DIR/alpine-php-doxygen --dockerfile $CI_PROJECT_DIR/alpine-php-doxygen/Dockerfile --destination $CI_REGISTRY_IMAGE/alpine-php-doxygen:latest
+        - /kaniko/executor --cleanup --context $CI_PROJECT_DIR/alpine-deploy --destination $CI_REGISTRY_IMAGE/alpine-deploy:latest
+        - /kaniko/executor --cleanup --context $CI_PROJECT_DIR/alpine-php-doxygen --destination $CI_REGISTRY_IMAGE/alpine-php-doxygen:latest
+        - /kaniko/executor --cleanup --context $CI_PROJECT_DIR/apache-php-mysql --destination $CI_REGISTRY_IMAGE/apache-php-mysql:8.1 --build-arg FROM_PHP_VERSION=8.1
+        - /kaniko/executor --cleanup --context $CI_PROJECT_DIR/apache-php-mysql --destination $CI_REGISTRY_IMAGE/apache-php-mysql:7.4 --build-arg FROM_PHP_VERSION=7.4
         
 docker-hub:
     stage: build
@@ -33,5 +35,7 @@ docker-hub:
     script:
         - mkdir -p /kaniko/.docker
         - echo "{\"auths\":{\"$DHUB_REGISTRY\":{\"username\":\"$DHUB_REGISTRY_USER\",\"password\":\"$DHUB_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
-        - /kaniko/executor --context $CI_PROJECT_DIR/alpine-deploy --dockerfile $CI_PROJECT_DIR/alpine-deploy/Dockerfile --destination $DHUB_REGISTRY_IMAGE/alpine-deploy:latest
-        - /kaniko/executor --context $CI_PROJECT_DIR/alpine-php-doxygen --dockerfile $CI_PROJECT_DIR/alpine-php-doxygen/Dockerfile --destination $DHUB_REGISTRY_IMAGE/alpine-php-doxygen:latest        
+        - /kaniko/executor --cleanup --context $CI_PROJECT_DIR/alpine-deploy --destination $DHUB_REGISTRY_IMAGE/alpine-deploy:latest
+        - /kaniko/executor --cleanup --context $CI_PROJECT_DIR/alpine-php-doxygen --destination $DHUB_REGISTRY_IMAGE/alpine-php-doxygen:latest
+        - /kaniko/executor --cleanup --context $CI_PROJECT_DIR/apache-php-mysql --destination $DHUB_REGISTRY_IMAGE/apache-php-mysql:8.1 --build-arg FROM_PHP_VERSION=8.1
+        - /kaniko/executor --cleanup --context $CI_PROJECT_DIR/apache-php-mysql --destination $DHUB_REGISTRY_IMAGE/apache-php-mysql:7.4 --build-arg FROM_PHP_VERSION=7.4
