--- a/apache-php-mysql/Dockerfile
+++ b/apache-php-mysql/Dockerfile
@@ -1,5 +1,11 @@
 ARG FROM_PHP_VERSION=8.1
 FROM php:${FROM_PHP_VERSION}-apache
+
+# enable production config
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+RUN echo "short_open_tag=Off" >> "$PHP_INI_DIR/php.ini"
+
+# install pdo/sql
 RUN docker-php-ext-install pdo pdo_mysql
 
 # enable .htaccess rewrites
