Locked version to 3.15.4

--- a/alpine-php-doxygen/Dockerfile
+++ b/alpine-php-doxygen/Dockerfile
@@ -1,3 +1,4 @@
-FROM alpine:latest
+# Locked Alpine version, as this is not an exposed image
+FROM alpine:3.15.4
 
 RUN apk add --no-cache git php7 php8 doxygen graphviz bash
