Smaller inotify image

--- a/debian-inotifywait/Dockerfile
+++ b/debian-inotifywait/Dockerfile
@@ -1,6 +1,7 @@
-FROM debian
+FROM debian:stable-slim
 
-RUN apt-get update
-RUN apt-get install -y inotify-tools procps
+RUN apt-get update && \
+    apt-get install -y inotify-tools procps && \
+    rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT ["/bin/bash"]
