Added priviledge drop and "sudo" package

--- a/debian-pterodactyl/Dockerfile
+++ b/debian-pterodactyl/Dockerfile
@@ -4,7 +4,7 @@ FROM debian:sid-slim
 # Install pre-requisites, redis and mariadb
 RUN apt-get update && \
     apt-get install -y php8.1 php8.1-common php8.1-cli php8.1-gd php8.1-mysql php8.1-mbstring php8.1-bcmath php8.1-xml php8.1-curl php8.1-zip && \
-    apt-get install -y apache2 tar unzip git curl nano && \
+    apt-get install -y apache2 tar unzip git curl sudo nano && \
     rm -rf /var/lib/apt/lists/*
 
 # Add composer
